<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shakibaenur.easynote.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_note_list"
        android:name="com.shakibaenur.easynote.ui.notelist.NoteListFragment"
        android:label="@string/title_note_list"
        tools:layout="@layout/fragment_note_list" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.shakibaenur.easynote.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/navigation_schedules"
        android:name="com.shakibaenur.easynote.ui.schedules.SchedulesFragment"
        android:label="@string/title_schedules" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.shakibaenur.easynote.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>