<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="com.shakibaenur.easynote.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_32"
                android:layout_marginTop="@dimen/text_margin_32"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/welcome"
                android:textSize="@dimen/text_size_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_8"
                android:layout_marginTop="@dimen/text_margin_32"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/user_name"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_24"
                app:layout_constraintStart_toEndOf="@+id/text_welcome"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile"
                android:layout_width="@dimen/image_44dp"
                android:layout_height="@dimen/image_44dp"
                android:layout_marginTop="@dimen/text_margin_32"
                android:layout_marginEnd="@dimen/text_margin_32"
                android:src="@drawable/img_user"
                app:civ_border_width="@dimen/civ_border_width_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_32"
                android:layout_marginTop="@dimen/text_margin_32"
                android:layout_marginEnd="@dimen/text_margin_32"
                android:background="@color/colorWhite"
                android:elevation="@dimen/elevation_4"
                app:cardCornerRadius="@dimen/paddin_7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_user_name">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/edit_text_search"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_50"
                        android:autofillHints="@string/text_search"
                       app:queryBackground="@color/colorWhite"
                        app:searchIcon="@drawable/ic_search"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/text_search"
                        android:inputType="text"
                        android:padding="@dimen/paddin_7"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layoutDirection="rtl"
                        android:paddingStart="@dimen/paddin_16"
                        android:paddingEnd="@dimen/paddin_16" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linear_layout_components"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_32"
                android:layout_marginTop="@dimen/margin_top_34"
                android:layout_marginEnd="@dimen/text_margin_32"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_search">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_notes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_view_62"
                    android:layout_weight="1.6"
                    android:background="@color/colorNote"
                    android:elevation="@dimen/elevation_4"
                    app:cardCornerRadius="@dimen/card_view_radius_5">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorNote">


                        <ImageView
                            android:id="@+id/image_View_notes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_notes" />

                        <TextView
                            android:id="@+id/text_view_notes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/text_notes"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/image_View_notes" />

                        <TextView
                            android:id="@+id/text_view_notes_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/text_30"
                            android:textColor="@color/colorWhite"
                            android:textSize="19sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_reminders"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_view_62"
                    android:layout_marginStart="@dimen/text_margin_8"
                    android:layout_weight="1.6"
                    android:background="@color/colorReminder"
                    android:elevation="@dimen/elevation_4"
                    app:cardCornerRadius="@dimen/card_view_radius_5">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorReminder">


                        <ImageView
                            android:id="@+id/image_view_reminder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_white_reminder" />

                        <TextView
                            android:id="@+id/text_view_reminder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/text_reminder"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/image_view_reminder" />

                        <TextView
                            android:id="@+id/text_view_reminder_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/text_13"
                            android:textColor="@color/colorWhite"
                            android:textSize="19sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_schedules"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_view_62"
                    android:layout_marginStart="@dimen/text_margin_8"
                    android:layout_weight="1.4"
                    android:background="@color/colorSchedules"
                    android:elevation="@dimen/elevation_4"
                    app:cardCornerRadius="@dimen/card_view_radius_5">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorSchedules">


                        <ImageView
                            android:id="@+id/image_view_schedules"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_white_schedules" />

                        <TextView
                            android:id="@+id/text_view_schedules"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/title_schedules"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/image_view_schedules" />

                        <TextView
                            android:id="@+id/text_view_schedules_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/text_0"
                            android:textColor="@color/colorWhite"
                            android:textSize="19sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_8"
                android:clipToPadding="false"
                android:paddingTop="@dimen/padding_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_components">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_view_calender"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/text_margin_32"

                            android:layout_marginEnd="@dimen/text_margin_32"
                            android:elevation="@dimen/elevation_4"
                            app:cardCornerRadius="@dimen/card_view_radius_5"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <CalendarView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.cardview.widget.CardView>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/my_notes_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_32"
                        android:layout_marginTop="@dimen/margin_32"
                        android:text="@string/my_notes"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/notesRecyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:layout_marginStart="@dimen/margin_32"
                        android:layout_marginEnd="@dimen/margin_32"
                        android:paddingTop="@dimen/padding_16"
                        android:paddingBottom="@dimen/padding_64" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>