<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_white_add_notes" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/text__add_note_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin_32"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:maxLines="1"
                    android:text="@string/add_notes"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_24"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/image_view_reminder"
                    app:layout_constraintStart_toEndOf="@+id/img_back"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_view_reminder"
                    android:layout_width="@dimen/image_24"
                    android:layout_height="@dimen/image_24"
                    android:layout_marginTop="@dimen/text_margin_40"
                    android:layout_marginEnd="@dimen/text_margin_12"
                    android:contentDescription="@string/text_reminder"
                    android:src="@drawable/ic_reminder"
                    app:layout_constraintEnd_toStartOf="@id/image_view_schedules"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/image_view_schedules"
                    android:layout_width="@dimen/image_24"
                    android:layout_height="@dimen/image_24"
                    android:layout_marginTop="@dimen/text_margin_40"
                    android:layout_marginEnd="@dimen/text_margin_36"
                    android:contentDescription="@string/title_schedules"
                    android:src="@drawable/ic_schedule"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_32"
                    android:layout_marginTop="@dimen/text_margin_32"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/title"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text__add_note_title" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_32"
                    android:layout_marginTop="@dimen/text_margin_12"
                    android:layout_marginEnd="@dimen/text_margin_32"
                    android:background="@color/colorWhite"
                    android:elevation="@dimen/elevation_4"
                    app:cardCornerRadius="@dimen/paddin_7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_title">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/edit_text_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:autofillHints="@string/text_search"
                            android:background="@color/colorWhite"
                            android:hint="@string/title"
                            android:inputType="text"
                            android:padding="@dimen/paddin_8"

                            android:paddingStart="@dimen/paddin_16"
                            android:paddingEnd="@dimen/paddin_16"
                          />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/text_view_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_32"
                    android:layout_marginTop="@dimen/text_margin_32"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/description"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_18"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_title" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_32"
                    android:layout_marginTop="@dimen/text_margin_12"
                    android:layout_marginEnd="@dimen/text_margin_32"
                    android:background="@color/colorWhite"
                    android:elevation="@dimen/elevation_4"
                    app:cardCornerRadius="@dimen/paddin_7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_description">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_text_description"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_200"
                            android:autofillHints="@string/text_search"
                            android:background="@color/colorWhite"
                            android:gravity="start"
                            android:hint="@string/description"
                            android:inputType="text"
                            android:padding="@dimen/paddin_8"
                            android:paddingStart="@dimen/paddin_16"
                            android:paddingEnd="@dimen/paddin_16"
                            android:textAlignment="textStart"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="@dimen/padding_32"
                    app:layout_constraintBottom_toBottomOf="@+id/text__add_note_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text__add_note_title"
                    app:srcCompat="@drawable/ic_action_back" />

                <ImageView
                    android:id="@+id/image_view_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_black_schedule"
                    app:layout_constraintBottom_toBottomOf="@+id/text_date"
                    app:layout_constraintStart_toStartOf="@+id/card_view_description"
                    app:layout_constraintTop_toTopOf="@+id/text_date"/>

                <ImageView
                    android:id="@+id/image_view_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/text_time"
                    app:layout_constraintStart_toStartOf="@+id/card_view_description"
                    app:layout_constraintTop_toTopOf="@+id/text_time"
                    app:srcCompat="@drawable/ic_reminder" />

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="@dimen/text_margin_16"
                    android:layout_marginTop="@dimen/text_margin_32"
                    app:layout_constraintStart_toEndOf="@+id/image_view_date"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_description" />

                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_16"
                    android:layout_marginTop="@dimen/text_margin_32"

                    android:textColor="@color/colorText"
                    app:layout_constraintStart_toEndOf="@+id/image_view_time"
                    app:layout_constraintTop_toBottomOf="@+id/text_date" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>